--- a/README
+++ b/README
@@ -33,3 +33,12 @@ adb shell am start -n org.videolan.vlc/org.videolan.vlc.gui.video.VideoPlayerAct
 
 
 
+Reference - Original Code Repositories
+======================================
+https://github.com/lecotex/vtuner
+https://github.com/lecotex/vtuner.apps
+https://github.com/lecotex/vtuner.linux-driver
+
+
+
+
